Began work with foundation.css, added logo

--- a/css/foundation.css
+++ b/css/foundation.css
@@ -1,281 +1,21 @@
-body{
-	background-color: #ffd0d8;
-	display: block;
-	padding-bottom: 20px;
-	font-family: Verdana, Arial, sans-serif;
-}
-p{
-	text-indent: 50px;
-	
-	}
-ul { 
-	list-style: none;
-	
-}
-.dropbtn {
-    background-color: #ffffcc;
-    color: white;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+body {
+    font-family: 'Montserrat';
 }
 
+header {
+    
+    padding-top: 0px;
+    border: 20px solid lightGray;
+    padding-bottom: 50px;
+    background-color: lightGray;
 
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: white;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    
 }
 
-
-.dropdown-content a {
-    color: #ffffcc;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-.dropdown:hover .dropdown-content {
-   display: block;
-}
-
-
-#header{
-	border-style: solid;
-	font-family: Arial, sans-serif;
-	display: block;
-	background-color: #a7777f;
-	color: white;
-	padding: 5px;
-	margin: 10px;
-	text-align: center;
-	overflow: visible;
-	margin: auto;
-	padding-bottom: 10px;
-	
-	}
-h1{
-	color: pink;
-	overflow: visible;
-	margin: auto;
-	font-family: Comic-sans, sans-serif;
-	text-decoration: none;
-}
-h2{	
-	text-align: center;
-	color: white;
-	text-decoration: underline;
-	}
-
-nav{
-	background-color: #ffffcc;
-	width: auto;
-	font-weight: bold;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	text-align: center;
-	display: block;
-	padding-right: 10px;}
-div{
-	background-color: white;
-	}
-footer{
-	
-	border-style: solid;
-	background-color: #9999ff;
-	color: #FFFFFF;
-	font-size: .60em;
-	font-style: italic;
-	text-align: center;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	display: block;
-	overflow: hidden;
-	margin: auto;
-	}	
-a{	
-	padding: 5px;
-	text-decoration: none;
-	color: #996633;
-	width: 80%;
-	margin-right: auto;
-	margin-left: auto;
-	overflow: auto;
-	}
-.head{
-	
-	text-decoration: none;
-
-	}
-#wrapper{
-	background-color: #FFFFCC;
-	width: 100%;
-	margin-right: auto;
-	margin-left: auto;
-	min-width: 700px;
-	max-width: 1600px;
-	box-shadow: 5px 5px 5px #888888;
-	height: 500px;
-	}
-
-.details{
-	padding-left: 20%;
-	padding-right: 20%;
-	overflow: auto;
-}
-main{
-	height: 400px;
-	border-width: 5px;
-	padding-top: 20px;
-	padding-left: 150px;
-	color: #993333;
-	overflow: auto;
-	display: block;
-	}
-	
-#right{
-	float: right;
-	border-width: 5px;
-	padding-top: 10px;
-	padding-bottom: 30px;
-	padding-left: 20px;
-	padding-right: 20px;
-	padding: 25px;
-	margin-left: 150px;
-	background-color: #F2EAB7;
-	color: #000000;
-	overflow: auto;
-	display: block;
-	}
-	
-nav a {
-	padding-left: 20px;
-	padding-right: 100px;
-	text-decoration: none;
-	padding-bottom: 15px;
-	}
-nav a:link {
-	text-decoration: none;
-	color: pink;
-	}
-nav a:visited{
-	text-decoration: none;
-	color: #ff99cc;
-	}
-nav a:hover{
-	text-decoration: none;
-	color: #C4518A;
-	}
-nav ul{
-	text-decoration: none;
-	list-style-type: none;
-	}
-floatleft{
-	float: left;
-	padding-right: 20px;
-	padding-bottom: 20px;
-	}
-	
-.floatright{
-	float:right;
-}	
-#mobile{
-	display: none;
-	}
-#desktop{ 
-	display: inline;
-}
-@media only screen and (max-width: 1024px){
-body{
-	margin: 0;
-	background-image: none;
-}
-#wrapper {
-	width: auto;
-	min-width: 0;
-	margin: 0;
-	box-shadow: none;
-}
-head{
-	border-style: solid;
-	background-position: center;
-		
-}	
-nav{	
-	text-decoration: none;
-	float: none;
-	width: auto;
-	padding-top: 0;
-	margin-top: 0;
-}
-nav li{
-	display: inline-block;
-}
-nav a{
-	text-decoration: none;
-	padding: 5px;
-	font-size: 1.3em;
-	width: 5px;
-	font-weight: bold;
-	border-style: none;
-}
-nav ul{	
-	text-decoration: none;
-	padding: 0;
-	margin: 0;
-}
-main{
-	padding: 2em;
-	
-}
-}
-@media only screen and (max-width: 768px){
-head{
-	border-style: solid;
-}
-nav a{
-	text-decoration: none;
-	display: block;
-	padding: 0.2em;
-	width: auto;
-	border-bottom: 1px;
-	border-color: #330000;
-}
-nav li{	
-	display: block;
-}
-h2{	
-	padding-top: 0.5em;
-	padding-right: 0;
-	padding-bottom: 0;
-	padding-left: 0.5em;
-	margin-right: 0.5em;
-	}
-.details{
-	padding-left: 0;
-	padding-right: 0;
-}
-.floatright{
-	display: none;
-}
-.floatleft{
-	padding-left: 0.5em;
-	padding-right: 0.5em;
-}
-#mobile{
-	display: inline;
-}
-#desktop{
-	display: none;
-}
+#logo img {
+    
+    max-height: 100px;
+    max-width: auto;
 }
