work on footer, still not done

--- a/css/foundation.css
+++ b/css/foundation.css
@@ -64,6 +64,6 @@ footer {
     text-align: center;
     font-size: 10pt;
     background-color: lightGray;
-    padding: 20px;
-    
+    /*padding: 20px;*/
+    border: solid 20px lightGray;
 }
