--- a/css/foundation.css
+++ b/css/foundation.css
@@ -2,21 +2,26 @@
 
 body {
     font-family: 'Montserrat';
+    /*background-color: #c1d1ff;*/
+    background-image: url(../images/ocean_waves.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 header {
     
     padding-top: 0px;
-    border: 20px solid lightGray;
+    border: 20px solid rgba(0, 0, 0, 0.0);
     padding-bottom: 50px;
-    background-color: lightGray;
+  /*  background-color: #163466; */
+    background: rgba(0, 0, 0, 0.5); 
 
     
 }
 
 header a {
     
-    color: dcdfe5;
+    color: white;
     text-decoration: none;
     
 }
@@ -29,6 +34,7 @@ nav {
     display: table;
     float: right;
     padding-top: 17px;
+    text-decoration: none;
 
 
 }
@@ -59,11 +65,22 @@ nav li {
    /* padding-bottom: 42px; */
 }
 
+a:link {
+    color: white;
+}
+
 footer {
     
+    color: white;
     text-align: center;
     font-size: 10pt;
-    background-color: lightGray;
-    /*padding: 20px;*/
-    border: solid 20px lightGray;
+    width: 100%;
+ /*   background-color: #163466; */
+    border: solid 20px rgba(0, 0, 0, 0);
+    background: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    bottom: 0;
+    left: 0;
+
+    
 }
