--- a/css/foundation.css
+++ b/css/foundation.css
@@ -47,6 +47,27 @@ body, html, article {
   padding-top: calc(2em + 40px);
 }
 
+.article-header {
+  background-color: #E31E25;
+  background-image: url(../images/canada_snow.jpg);
+  background-size: cover;
+    background-repeat: no-repeat;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-flow: column;
+      flex-flow: column;
+  height: 80%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  line-height: 1.3;
+  min-height: 200px;
+  padding: 2em 4% 2em;
+  padding-top: calc(2em + 40px);
+}
+
 .article-section {
   line-height: 200%;
   margin: 0 auto;
