--- a/css/foundation.css
+++ b/css/foundation.css
@@ -1,4 +1,4 @@
-.article-subtitle, .article-title {
+#article-subtitle, #article-title {
   font-weight: 300;
   letter-spacing: .15em;
 }
@@ -89,7 +89,7 @@ body, html, article {
   display: block;
 }
 
-.article-title {
+#article-title {
   font-size: 1.8rem;
   margin-bottom: 10px;
   text-transform: uppercase;
