--- a/css/foundation.css
+++ b/css/foundation.css
@@ -28,7 +28,7 @@ body, html, article {
 
 #article-header-uFacts {
   background-color: #E31E25;
-  
+  background-image: url(../images/canada_snow.jpg);
   background-size: cover;
     background-repeat: no-repeat;
   color: white;
@@ -49,7 +49,7 @@ body, html, article {
 
 #article-header {
   background-color: #E31E25;
-  
+  background-image: url(../images/canada_snow.jpg);
   background-size: cover;
     background-repeat: no-repeat;
   color: white;
