various changes to styling

--- a/css/foundation.css
+++ b/css/foundation.css
@@ -96,7 +96,7 @@ body, html, article {
 }
 
 #status {
-    color: green;
+    color: black;
     text-align: center;
     font-size: 42pt;
     padding-bottom: 30px;
