--- a/css/foundation.css
+++ b/css/foundation.css
@@ -94,7 +94,7 @@ body, html, article {
 }
 
 #status {
-    color: black;
+    color: green;
     text-align: center;
     font-size: 42pt;
     padding-bottom: 30px;
